# Apollo

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
scripts/: README.txt  deps.ps1  deps.sh
src/: Main.ixx
src/Core/: Debug.ixx  Game.ixx  IDraw.ixx  ISingleton.ixx  IUpdate.ixx
src/Space/: BaseSpace.ixx  SpaceCamera.ixx
src/Space/Galaxy/: BaseGalaxy.ixx
src/Space/Moons/: BaseMoon.ixx
src/Space/Planets/: BasePlanet.ixx
src/Space/Stars/: BaseStar.ixx
src/Stages/: Demo.ixx  Menu.ixx
src/State/: IState.ixx  StateManager.ixx
